activity: Prevent cells from wrapping
(imported from commit d6f9d935b9ed32351804aa153835a171ff093e10)

--- a/zephyr/static/styles/activity.css
+++ b/zephyr/static/styles/activity.css
@@ -5,6 +5,7 @@
 .table td {
     padding-top:    2px;
     padding-bottom: 2px;
+    white-space: nowrap;
 }
 
 .table-striped tr.recently_active td {
